[package]
authors = ["MaidSafe Developers <dev@maidsafe.net>"]
description = "A secured storage DHT"
documentation = "https://docs.rs/sn_routing"
homepage = "https://maidsafe.net"
license = "GPL-3.0"
name = "sn_routing"
readme = "README.md"
repository = "https://github.com/maidsafe/sn_routing"
version = "0.37.0"
edition = "2018"

[dependencies]
async-recursion = "0.3.1"
bincode = "1.2.1"
bls = { package = "threshold_crypto", version = "~0.4.0" }
bls_dkg = "~0.1.0"
bytes = "~0.5.4"
crossbeam-channel = "~0.4.2"
ctrlc = { version = "3", optional = true, features = ["termination"] }
ed25519-dalek = { version = "1.0.0-pre.3", features = ["serde"] }
env_logger = { version = "~0.7.1", optional = true }
err-derive = "~0.2.4"
sn_fake_clock = "~0.4.0"
futures = "~0.3.5"
hex_fmt = "~0.3.0"
itertools = "~0.9.0"
lazy_static = { version = "1", optional = true }
log = "~0.4.8"
lru_time_cache = "~0.11.0"
mock-quic-p2p = { git = "https://github.com/maidsafe/qp2p", rev = "602dc620", optional = true }
qp2p = { git = "https://github.com/maidsafe/qp2p", features = ["upnp"], branch = "master" }
rand = "~0.7.3"
rand_core = "~0.5.1"
rand_os = "~0.2.2"
rand_xorshift = "~0.2.0"
bls_signature_aggregator = { git = "https://github.com/madadam/bls_signature_aggregator.git", branch = "repetition" }
serde = { version = "1.0.111", features = ["derive" ,"rc"] }
tiny-keccak = { version = "2.0.2", features = ["sha3"] }
tokio = { version = "~0.2.5", features = ["sync", "time"] }
xor_name = "1.1.0"

[dev-dependencies]
env_logger = "~0.7.1"
structopt = "~0.3.17"
anyhow = "1"

[features]
mock = [
    "lru_time_cache/sn_fake_clock",
    "mock-quic-p2p",
    "ctrlc",
    "lazy_static",
    "bls/use-insecure-test-only-mock-crypto",
    "env_logger",
    "bls_signature_aggregator/mock_timer"
]
