[package]
authors = ["MaidSafe Developers <dev@maidsafe.net>"]
description = "A secured storage DHT"
documentation = "https://docs.rs/sn_routing"
homepage = "https://maidsafe.net"
license = "GPL-3.0"
name = "sn_routing"
readme = "README.md"
repository = "https://github.com/maidsafe/sn_routing"
version = "0.37.0"
edition = "2018"

[dependencies]
bincode = "1.2.1"
bls = { package = "threshold_crypto", version = "~0.4.0" }
bls_dkg = "~0.2.0"
bls_signature_aggregator = "~0.1.4"
bytes = "~0.5.4"
ed25519-dalek = { version = "1.0.1", features = ["serde"] }
err-derive = "~0.2.4"
futures = "~0.3.6"
hex_fmt = "~0.3.0"
itertools = "~0.9.0"
log = "~0.4.8"
lru_time_cache = "~0.11.0"
qp2p = "~0.9.1"
rand = "~0.7.3"
rand_chacha = "~0.2.2"
serde = { version = "1.0.117", features = ["derive"] }
tiny-keccak = { version = "2.0.2", features = ["sha3"] }
tokio = { version = "~0.2.22", features = ["sync", "time", "rt-util"] }
xor_name = "1.1.0"

[dev-dependencies]
anyhow = "1"
assert_matches = "1.3"
env_logger = "~0.7.1"
structopt = "~0.3.17"
proptest = "0.10.1"
rand = { version = "~0.7.3", features = ["small_rng"] }
