[package]
authors = [ "MaidSafe Developers <dev@maidsafe.net>" ]
description = "A secured storage DHT"
documentation = "https://docs.rs/sn_routing"
homepage = "https://maidsafe.net"
license = "GPL-3.0"
name = "sn_routing"
readme = "README.md"
repository = "https://github.com/maidsafe/sn_routing"
version = "0.71.4"
edition = "2018"

[dependencies]
bincode = "1.2.1"
bls_dkg = "~0.3.1"
bls_signature_aggregator = "~0.2.0"
bytes = "1.0.1"
futures = "~0.3.12"
hex_fmt = "~0.3.0"
itertools = "~0.9.0"
lru_time_cache = "~0.11.0"
qp2p = "~0.11.9"
rand = "~0.7.3"
rand_chacha = "~0.2.2"
resource_proof = "0.8.0"
sn_messaging = { git = "https://github.com/bochaco/sn_messaging", branch = "feat-adding-routing-msg-defs" }
#sn_messaging = "26.0.0"
sn_data_types = "~0.18.3"
thiserror = "1.0.23"
tokio = "1.3.0"
xor_name = "1.1.0"
secured_linked_list = "0.1.1"

  [dependencies.bls]
  package = "threshold_crypto"
  version = "~0.4.0"

  [dependencies.ed25519-dalek]
  version = "1.0.1"
  features = [ "serde" ]

  [dependencies.serde]
  version = "1.0.117"
  features = [ "derive" ]

  [dependencies.tiny-keccak]
  version = "2.0.2"
  features = [ "sha3" ]

  [dependencies.tracing]
  version = "~0.1.22"
  default-features = false
  features = [ "log", "std" ]

[dev-dependencies]
anyhow = "1"
assert_matches = "1.3"
proptest = "0.10.1"
structopt = "~0.3.17"
tracing-appender = "~0.1.2"
tracing-subscriber = "~0.2.15"
yansi = "~0.5.0"

  [dev-dependencies.tokio-util]
  version = "~0.6.4"
  features = [ "time" ]

  [dev-dependencies.rand]
  version = "~0.7.3"
  features = [ "small_rng" ]
